add screenshot and movie blank checks